--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
                   <p id="titulo-dual"><span>DUAL</span>THERM</p>
                   <p id="texto-dual">Una solucion innovadora que mejora la eficiencia y la autonomia</p>
                    <div class="embed-responsive embed-responsive-16by9" id="video">
-                     <iframe class="embed-responsive-item video" src="https://www.youtube.com/embed/LPEeK820ceQ" frameborder="0" allowfullscreen></iframe>
+                     <iframe class="video-container embed-responsive-item video" src="https://www.youtube.com/embed/LPEeK820ceQ" frameborder="0" allowfullscreen></iframe>
                    </div>
             </div><!--col-izquierda-->
            <div class= "col-sm-12 col-md-6 col-xs-12">
@@ -66,7 +66,7 @@
         
         <section class="container" id="ventajas">
             <div class="row">
-             <div class= "col-sm-12 col-md-6 col-md-offset-3 col-xs-12" >
+             <div class= "mbr-section-content col-sm-12 col-md-6 col-md-offset-3 col-xs-12" >
                </br></br><h1 class="title">Ventajas<span> Dual Therm</span></h1></br></br>
              </div>    
             </div><!--row-->
@@ -126,7 +126,7 @@
     <footer>
      <div class="container pie">
         <div class="row " >
-            <div class="col-md-2 col-md-offset-1 col-sm-12">
+            <div class="mbr-footer-content col-md-2 col-md-offset-1 col-sm-12 col-xs-12">
                  <img id="logotipo"class="img-responsive"src="img/domusa-logotipo-white.png"></li></br></br></br>
                  <a class="enlaces"  href="/es/condiciones-de-uso">CONDICIONES DE USO</a></br>
                   <a class="enlaces" href="/es/politica-de-privacidad">POLÍTICA DE PRIVACIDAD</a>
